--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -1,21 +1,17 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test
-    username: test
-    password: Coocon123!
+    url: jdbc:postgresql://localhost:54311/aoalocaldb
+    username: postgres
+    password: JRaspberry1!
   jpa:
     hibernate:
-     ddl-auto: create-drop
+      ddl-auto: none
     properties:
       hibernate:
-        show_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: aoalocal
         format_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
+        show_sql: true
 logging:
   level:
     com: debug
