--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'com.auth0:java-jwt:3.18.1'
+	implementation 'com.auth0:java-jwt:3.18.1
 	compileOnly 'org.apache.commons:commons-lang3:3.12.0'
 	compileOnly 'org.projectlombok:lombok'
 
@@ -36,6 +36,6 @@ dependencies {
 	testRuntimeOnly  'com.h2database:h2'
 }
 
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
