--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -26,16 +26,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
     compileOnly 'org.projectlombok:lombok'
 	compileOnly 'org.apache.commons:commons-lang3:3.12.0'
 
+	implementation 'com.auth0:java-jwt:3.18.1'
 	runtimeOnly 'org.postgresql:postgresql'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testRuntimeOnly  'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
@@ -43,6 +48,7 @@ dependencies {
 //Spring rest docs
 ext {
 	snippetsDir = file('build/generated-snippets')
+
 }
 
 test {
