--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -20,6 +20,7 @@ repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -37,19 +38,21 @@ dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
 
 //Spring rest docs
 ext {
 	snippetsDir = file('build/generated-snippets')
 }
 
+test {
+	outputs.dir snippetsDir
+	useJUnitPlatform()
+}
+
 bootJar {
 	dependsOn asciidoctor
-	from("build/docs/asciidoc"){
-		into 'BOOT-INF/classes/static/docs'
+	from ("${asciidoctor.outputDir}/html5") {
+		into 'static/docs'
 	}
 }
 
