--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'com.auth0:java-jwt:3.18.1'
 
 	compileOnly 'org.apache.commons:commons-lang3:3.12.0'
+	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
